[tool.poetry]
name = "czml4"
version = "0.1.0"
description = ""
authors = ["Daniel Stoops <danielstoops25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
python-dateutil = "^2.8.2"
w3lib = "^2.1.2"


[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"
astropy = "^5.3.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
types-python-dateutil = "^2.8.19.14"
black = "^23.11.0"
build = "^1.0.3"
flake8 = "^6.1.0"
isort = "^5.12.0"


[tool.poetry.group.examples.dependencies]
jupyterlab = "^4.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
